add TRACE_UPDATE_LOG